# Merlin_2

./: .black.toml  .claude-init.sh  .claude-purpose-context.md  .claude-task-context.md  .coverage  .defer-until  .deferral-notes.md  .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .metadata-index.md  .metadata-schema.md  .tree-synopsis.md  .vulture.toml  .worktree-monitor.conf  .worktree-scope.json  ANALYSIS_SUMMARY.md  API_KEY_SECURITY.md  APP_PLATFORM_DEPLOYMENT_GUIDE.md  AUTOMATED_FIREWALL_SETUP.md  BEFORE_AFTER_COMPARISON.md  BRANCH_STATUS.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONVERSION_SUMMARY.md  DASHBOARD_ACCESS_FIXED.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DASHBOARD_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  DIGITAL_OCEAN_DATABASE_CONFIGURATION.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  EXPANSION_SUMMARY.md  FINAL_EXECUTION_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINDINGS_REPORT.md  (+139 more)
.claude/: README-WORKFLOWS.md  SUB-AGENT-EVALUATION-FRAMEWORK.md  WORKTREE_QUICK_REFERENCE.md  init.sh  settings.json  settings.local.json  statusline.sh  validation-config.json  worktree-config.json  worktree-template.md
.devcontainer/: CLAUDE_CODE_NOTES.md  Dockerfile  README.md  devcontainer.json  docker-compose.yml
.git-hooks/: pre-commit-security-check.sh
.github/: COMMIT_TEMPLATE.md  PROJECT-CREATOR-README.md  PULL_REQUEST_TEMPLATE.md  QUICK-START.md  README.md  SECRETS.md
archived_files/: README_archive_organization.md  database_additional_normalization.sql  database_schemas.sql  (+1 more)
(+1153 files in other folders)
